Name:                   yesod-auth-simple
Version:                0.0.0
Author:                 Jezen Thomas <jezen@jezenthomas.com>
Maintainer:             Jezen Thomas <jezen@jezenthomas.com>
License:                BSD3
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md
Category:               Web, Yesod
Synopsis:               Traditional email/pass auth for Yesod.
Description:
  This is an authentication plugin for the Yesod web framework. It provides the
  user with a traditional email and password interface to authenticate themselves
  with your web application.
  .
  This is originally adapted from prasmussen/glot-www

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Yesod.Auth.Simple
  Build-Depends:
      base >= 4 && < 5
    , aeson
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , clientsession
    , email-validate
    , http-types
    , scrypt
    , text
    , time
    , yesod-auth >= 1.6
    , yesod-core >= 1.6
    , yesod-form >= 1.6

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/jezen/yesod-auth-simple
