Name:                   yesod-auth-simple
Version:                0.0.0
Author:                 Jezen Thomas <jezen@jezenthomas.com>
Maintainer:             Jezen Thomas <jezen@jezenthomas.com>
License:                BSD3
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md
Category:               Web, Yesod
Synopsis:               Traditional email/pass auth for Yesod.
Description:
  This is an authentication plugin for the Yesod web framework. It provides the
  user with a traditional email and password interface to authenticate themselves
  with your web application.
  .
  This is originally adapted from prasmussen/glot-www

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Default-Extensions:   NoImplicitPrelude
  Exposed-Modules:      Yesod.Auth.Simple
  Build-Depends:
      base >= 4 && < 5
    , aeson
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , classy-prelude        >= 0.10.2
    , classy-prelude-yesod  >= 1.1
    , clientsession
    , email-validate
    , http-types
    , scrypt
    , text
    , time
    , wai
    , blaze-html
    , vector
    , zxcvbn-hs
    , yesod-auth >= 1.6
    , yesod-core >= 1.6
    , yesod-form >= 1.6
    , persistent >= 2.8.2

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src, test
  Ghc-Options:          -Wall
  Default-Extensions:   NoImplicitPrelude
  Main-Is:              Spec.hs
  Build-Depends:
      base >= 4 && < 5
    , hspec
    , aeson
    , base64-bytestring
    , blaze-html
    , bytestring
    , classy-prelude        >= 0.10.2
    , classy-prelude-yesod  >= 1.1
    , clientsession
    , directory
    , email-validate
    , fast-logger
    , http-types
    , monad-logger
    , persistent >= 2.8.2
    , persistent-sqlite
    , scrypt
    , text
    , time
    , vector
    , wai
    , yesod
    , yesod-test
    , yesod-auth >= 1.6
    , yesod-form >=1.6     && <1.7
    , yesod-core >=1.6.15  && <1.7
    , zxcvbn-hs

  Other-Modules:
    ExampleApp
    TestImport
    Yesod.Auth.Simple
    Yesod.Auth.Simple.Types
    Yesod.Auth.SimpleSpec
    Yesod.Auth.Simple.TypesSpec

Source-Repository head
  Type:                 git
  Location:             https://github.com/jezen/yesod-auth-simple
